--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   sprintf: ^4.0.2
   brasil_fields: ^0.0.7+2
   intl: ^0.15.8
-  carousel_slider: ^1.3.0
   cloud_firestore: any
+  curved_navigation_bar: any
 
 dev_dependencies:
   flutter_test:
