--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ unlinked_spec.ds
 **/android/**/GeneratedPluginRegistrant.java
 **/android/key.properties
 *.jks
-google-services.json
+**/android/app/google-services.json
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
