--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,13 @@ dependencies:
   sprintf: ^4.0.2
   brasil_fields: ^0.0.7+2
   intl: ^0.15.8
+
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  google_sign_in: ^4.0.7
+  firebase_analytics: ^5.0.1
+  flutter_facebook_login: ^2.0.1
   cloud_firestore: any
-  curved_navigation_bar: any
 
 dev_dependencies:
   flutter_test:
