--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Bank Cards</string>
+	<string>Mobile Bank Template</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -22,6 +22,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Solicitamos sua localização para a prevenção de fraudes</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Solicitamos sua localização para a prevenção de fraudes</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Solicitamos sua localização para a prevenção de fraudes</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,11 +47,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSLocationAlwaysUsageDescription</key>
-    <string>Solicitamos sua localização para a prevenção de fraudes</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Solicitamos sua localização para a prevenção de fraudes</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>Solicitamos sua localização para a prevenção de fraudes</string>
 </dict>
 </plist>
