--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_facebook_login: ^2.0.1
   cloud_firestore: any
 
+  sliding_up_panel: ^0.3.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
