--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   rxdart: ^0.20.0
   flutter_svg: ^0.14.2
-  provider:
+  provider: ^3.1.0+1
   json_annotation: ^2.0.0 #flutter pub run build_runner watch --delete-conflicting-outputs
   dio: 2.1.13
   sqflite: ^1.1.6+2
