--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   rxdart: ^0.20.0
   flutter_svg: ^0.14.2
-  provider: ^3.1.0+1
+  provider: ^4.0.0
   json_annotation: ^2.0.0 #flutter pub run build_runner watch --delete-conflicting-outputs
   dio: 2.1.13
   sqflite: ^1.1.6+2
@@ -41,7 +41,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   sprintf: ^4.0.2
   brasil_fields: ^0.0.7+2
-  intl: ^0.15.8
+  intl: ^0.16.0
   flutter_screenutil:
   flutter_spinkit:
 
